src/app/courses/course-list/course-list.component.scss
app-course-list {
    > header {
        height: 40vh;
    }
    > .mdl-layout__header {
        display: initial;
        .mdl-layout__header-row {
            height: 40px;
            .mdl-layout-title {
                .material-icons {
                    left: -2.2em;
                    top: -0.1em;
                }
            }
            #course-menu {
                right: 8px;
                position: absolute;
            }
        }
    }
    > .mdl-grid {
        padding-top: 3.5em;
        .mdl-card__title {
            justify-content: center;
            flex-direction: column;
            .mdl-card__title-text {
                align-self: start;
            }
        }
        .mdl-card.mdl-cell {
            cursor: pointer;
            border-radius: 0.3em;
        }
    }
}

